--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/parvsondhi/Haven#readme",
   "dependencies": {
+    "apiai": "^3.0.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "request": "^2.75.0"
