--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apiai": "^3.0.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "meetup-api": "^1.4.6",
     "regex": "^0.1.1",
     "request": "^2.75.0"
   }
